# 21344_NN_Quantization_Hessian_Analysis

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  download_mnist.py  runner.py
exps/: visualization.ipynb
exps/128x128x128/: config.json  results.json
exps/32x32x32/: config.json  results.json
exps/64x64x64/: config.json  results.json
inc/: CMakeLists.txt  generate_data.h  globals.h  hessian.h  net.h  q_matrix.h  quantizer.h  train_test.h  utils.h
sandbox/: Hessian.ipynb  KL.ipynb  Quantization.ipynb
src/: CMakeLists.txt  generate_data.tpp  hessian.tpp  main.cpp  net.cpp  q_matrix.tpp  quantizer.tpp  train_test.tpp
